--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   animations: ^2.0.3
+  google_maps_flutter: ^2.1.10
+  location: ^4.4.0
 
 
 dev_dependencies:
