--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   animations: ^2.0.3
   google_maps_flutter: ^2.1.10
   location: ^4.4.0
+  image_picker: ^0.8.5+3
+  path_provider: ^2.0.11
+
 
 
 dev_dependencies:
