--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   location: ^4.4.0
   image_picker: ^0.8.5+3
   path_provider: ^2.0.11
-
+  shared_preferences: ^2.0.15
 
 
 dev_dependencies:
