--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 android/app/src/main/AndroidManifest.xml
+android/app/src/main/AndroidManifest.xml
