--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   image_picker: ^0.8.5+3
   path_provider: ^2.0.11
   shared_preferences: ^2.0.15
+  qr_flutter: ^4.0.0
 
 
 dev_dependencies:
