--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   path_provider: ^2.0.11
   shared_preferences: ^2.0.15
   qr_flutter: ^4.0.0
+  cloud_firestore: ^3.4.4
+  firebase_core: ^1.20.1
 
 
 dev_dependencies:
