--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,13 +2,14 @@
     package="com.example.gpsd">
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
    
    <application
-        android:label="gpsd"
-        android:name="${applicationName}"
+        android:label="Vaccine Wallet"
         android:icon="@mipmap/ic_launcher">
     <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="AIzaSyCluwtvz2PlCLl0DcBd52qU1cZbaa3-4Qs"/>
+               android:value="AIzaSyA1KXK4dnSJ8jBBKDakzYsRfwg-1fxQ-hY"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
