--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core_platform_interface: ^4.5.2
   animations: ^2.0.3
   google_maps_flutter: ^2.1.10
   location: ^4.4.0
@@ -40,13 +41,13 @@ dependencies:
   path_provider: ^2.0.11
   shared_preferences: ^2.0.15
   qr_flutter: ^4.0.0
-  cloud_firestore: ^3.4.4
-  firebase_core: ^1.20.1
+  cloud_firestore: ^4.3.1
+  firebase_core: ^2.4.1
   geolocator: ^9.0.1
 
 dev_dependencies:
 
-  flutter_launcher_icons: ^0.10.0
+  flutter_launcher_icons: ^0.11.0
 
 flutter_icons:
   android: true
